--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div class="top-header">
             <div class="full-width">
 
-                <h1><a href="index.html">Ethel's Code Compendium</a></h1>
+                <h1><a href="index.html">Jeremy's Code Compendium</a></h1>
 
 
                 <nav>
